--- a/mysite/templates/polls/index.html
+++ b/mysite/templates/polls/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <table class="table">
 <thead>
@@ -19,10 +20,29 @@
                 <th scope="row">{{ forloop.counter }}</th>
                 <td>{{ answer.user_first_name }}</td>
                 <td>{{ answer.user_last_name }}</td>
-                <td>{{ answer.value }}</td>
+                <td>
+                    <span id="read-{{ answer.id }}" >
+                        <em id="value-{{ answer.id }}">{{ answer.value }}</em>
+                        <i 
+                            class="fa fa-pencil"
+                            onclick="showFormInput({{ poll.id }}, {{ answer.id }})"
+                        ></i>
+                    </span>
+                    <span id="edit-{{ answer.id }}" style="display: none">
+                        <input type="text" id="form-{{ answer.id }}"></input>
+                        <i 
+                            class="fa fa-floppy-disk"
+                            onclick="saveAnswer({{ poll.id }}, {{ answer.id }})"
+                        ></i>
+                    </span>
+                </td>
             </tr>
         {% endfor %}
     {% endfor %}
 </tbody>
 </table>
+{% endblock %}
+
+{% block scripts %}
+    <script src="/static/polls.js"></script>
 {% endblock %}
