--- a/mysite/templates/polls/index.html
+++ b/mysite/templates/polls/index.html
@@ -25,7 +25,7 @@
                         <em id="value-{{ answer.id }}">{{ answer.value }}</em>
                         <i 
                             class="fa fa-pencil"
-                            onclick="showFormInput({{ poll.id }}, {{ answer.id }})"
+                            onclick="showFormInput({{ answer.id }})"
                         ></i>
                     </span>
                     <span id="edit-{{ answer.id }}" style="display: none">
